@@ -1199,3 +1199,8 @@ instead of the menu's parent window
 (310)  Changed "TARGET_HOST_UNIX_X11" to "TARGET_HOST_POSIX_X11" to avoid
 trademark issues, per Joe Krahn; also rationalized the other "TARGET_HOST"
 definitions
+
+(311)  Added futher callback functionality to the CallbackMaker demo program.
+Also added a prompt for user input to highlight a difference betwen GLUT
+and "freeglut"
+
